# hgg

./: .gitignore  README.ja.md  README.md  RELEASING.md  cabal.project
_trash/: api-guide-07-3d.md.20260718
_trash/tutorials-05-layers.20260718/: README.md
_trash/tutorials-07-communication.20260718/: Communication.hs
_trash/tutorials-08-datetimes.20260718/: README.md
_trash/tutorials-09-missing.20260718/: Missing.hs  README.md
_trash/tutorials-10-joins.20260718/: README.md
dist-newstyle/cache/: compiler  config  elaborated-plan  plan.json  solver-plan  source-hashes  up-to-date
docs/: README.ja.md  README.md  api-guide.ja.md  api-guide.md  comparison-vega-lite.ja.md  comparison-vega-lite.md  comparison.ja.md  comparison.md  getting-started.ja.md  getting-started.md  migration-from-ggplot.ja.md  migration-from-ggplot.md  modules.ja.md  modules.md  vega-lite-gallery.ja.md  vega-lite-gallery.md
docs/api-guide/: 01-quickstart.ja.md  01-quickstart.md  02-layers.ja.md  02-layers.md  03-decoration.md  03-encoding-scale.ja.md  03-encoding-scale.md  04-backends.md  04-decoration.ja.md  04-decoration.md  05-backends.ja.md  05-backends.md  (+15 more)
hgg/: CHANGELOG.md  README.md  hgg.cabal
hgg-3d/: CHANGELOG.md  README.md  hgg-3d.cabal
hgg-3d/data/: webgl-spec.js
hgg-3d/examples/: Browser3DDemo.hs  Plot3DDemo.hs  PrintJson.hs
hgg-3d/src/Graphics/Hgg/: ThreeD.hs
hgg-3d/src/Graphics/Hgg/ThreeD/: Axes.hs  Bar.hs  Bound.hs  Browser.hs  Delaunay.hs  Easy.hs  Line.hs  Projection.hs  Scatter.hs  Spec.hs  Surface.hs  Types.hs
hgg-3d/src/Hgg/Plot/: ThreeD.hs
hgg-3d/src/Hgg/Plot/ThreeD/: Axes.hs  Bar.hs  Bound.hs  Browser.hs  Delaunay.hs  Easy.hs  Line.hs  Projection.hs  Scatter.hs  Spec.hs  Surface.hs  Types.hs
hgg-3d/test/: Spec.hs
hgg-analyze-bridge/: CHANGELOG.md  hgg-analyze-bridge.cabal
hgg-analyze-bridge/examples/: StatInDemo.hs  ThreeRoutesDemo.hs
hgg-analyze-bridge/src/Graphics/Hgg/Bridge/: Analyze.hs  Stat.hs
hgg-analyze-bridge/src/Graphics/Hgg/Bridge/Analyze/: Internal.hs
hgg-analyze-bridge/src/Hgg/Plot/Bridge/: Analyze.hs  Stat.hs
hgg-analyze-bridge/src/Hgg/Plot/Bridge/Analyze/: Internal.hs
hgg-analyze-bridge/test/: Spec.hs
hgg-core/: CHANGELOG.md  README.md  hgg-core.cabal
hgg-core/src/Graphics/Hgg/: Color.hs  DAG.hs  Easy.hs  Layout.hs  Palette.hs  Primitive.hs  Render.hs  Spec.hs  Unit.hs  Validate.hs
hgg-core/src/Graphics/Hgg/Color/: Named.hs
hgg-core/src/Graphics/Hgg/DAG/Internal/: Sugiyama.hs
hgg-core/src/Graphics/Hgg/Layout/: Grid.hs  RangeOf.hs
hgg-core/src/Graphics/Hgg/Math/: Griddata.hs  Special.hs
hgg-core/src/Graphics/Hgg/Render/: Basic.hs  Common.hs  Distribution.hs  EdgeRoute.hs  Layer.hs  MCMC.hs  Special.hs  Statistical.hs
hgg-core/src/Graphics/Hgg/Spec/: Axis.hs  Bake.hs  Column.hs  Concat.hs  Constructors.hs  CustomMark.hs  Decoration.hs  Layer.hs  Mark.hs  Setters.hs  Theme.hs  Visual.hs
hgg-core/src/Hgg/Plot/: Color.hs  DAG.hs  Easy.hs  Layout.hs  Palette.hs  Primitive.hs  Render.hs  Spec.hs  Unit.hs  Validate.hs
hgg-core/src/Hgg/Plot/Color/: Named.hs
hgg-core/src/Hgg/Plot/DAG/Internal/: Sugiyama.hs
hgg-core/src/Hgg/Plot/Layout/: Grid.hs  RangeOf.hs
hgg-core/src/Hgg/Plot/Math/: Griddata.hs  Special.hs
hgg-core/src/Hgg/Plot/Render/: Basic.hs  Common.hs  Distribution.hs  EdgeRoute.hs  Layer.hs  MCMC.hs  Special.hs  Statistical.hs
hgg-core/src/Hgg/Plot/Spec/: Axis.hs  Bake.hs  Column.hs  Concat.hs  Constructors.hs  CustomMark.hs  Decoration.hs  Layer.hs  Mark.hs  Setters.hs  Theme.hs  Visual.hs
hgg-core/test/: Spec.hs
hgg-custom/: CHANGELOG.md  hgg-custom.cabal
hgg-custom/src/Graphics/Hgg/Custom/: Dendrogram.hs
hgg-custom/src/Hgg/Plot/Custom/: Dendrogram.hs
hgg-dataframe/: LICENSE  hgg-dataframe.cabal
hgg-dataframe/src/Graphics/Hgg/: DataFrame.hs
hgg-dataframe/src/Hgg/Plot/: DataFrame.hs
hgg-dataframe/test/: Spec.hs
hgg-doe/: hgg-doe.cabal
hgg-doe/src/Graphics/Hgg/: DoE.hs
hgg-doe/src/Graphics/Hgg/DoE/: Interaction.hs  MainEffects.hs  ResponseSurface.hs
hgg-doe/src/Hgg/Plot/: DoE.hs
hgg-doe/src/Hgg/Plot/DoE/: Interaction.hs  MainEffects.hs  ResponseSurface.hs
hgg-frame/: CHANGELOG.md  hgg-frame.cabal
hgg-frame/src/Graphics/Hgg/: Frame.hs
hgg-frame/src/Hgg/Plot/: Frame.hs
hgg-frame/test/: Spec.hs
hgg-ihaskell/: CHANGELOG.md  hgg-ihaskell.cabal
hgg-ihaskell/examples/: DemoSvg.hs
hgg-ihaskell/src/Graphics/Hgg/: IHaskell.hs
hgg-ihaskell/src/Hgg/Plot/: IHaskell.hs
hgg-ihaskell/test/: Spec.hs
hgg-latex/: CHANGELOG.md  hgg-latex.cabal
hgg-latex/src/Graphics/Hgg/Backend/: LaTeX.hs
hgg-latex/src/Hgg/Plot/Backend/: LaTeX.hs
hgg-latex/test/: Spec.hs
hgg-latex/test/golden/: scatter-golden.tex
hgg-pdf/: CHANGELOG.md  hgg-pdf.cabal
hgg-pdf/src/Graphics/Hgg/Backend/: PDF.hs
hgg-pdf/src/Hgg/Plot/Backend/: PDF.hs
hgg-pdf/test/: Spec.hs
hgg-rasterific/: CHANGELOG.md  hgg-rasterific.cabal
hgg-rasterific/src/Graphics/Hgg/Backend/: Rasterific.hs
hgg-rasterific/src/Hgg/Plot/Backend/: Rasterific.hs
hgg-rasterific/test/: Spec.hs
hgg-semi/: README.md  hgg-semi.cabal
hgg-semi/src/Graphics/Hgg/Semi/: BoxCoxPlot.hs  ControlChart.hs  ParetoChart.hs  ProbabilityPlot.hs  WaferMap.hs
hgg-semi/src/Hgg/Plot/Semi/: BoxCoxPlot.hs  ControlChart.hs  ParetoChart.hs  ProbabilityPlot.hs  WaferMap.hs
hgg-semi/test/: Spec.hs
hgg-svg/: CHANGELOG.md  hgg-svg.cabal
hgg-svg/examples/: CustomMarkDemo.hs  DagComparisonDemo.hs  DagParityBench.hs  DfPlotDemo.hs  DocFigures.hs  GalleryDemo.hs  JsonDump.hs  Phase52KinkProbe.hs  Phase53XCoordProbe.hs  ScatterDemo.hs  Tutorial01Easy.hs  Tutorial02Grammar.hs  Tutorial03Overlay.hs  Tutorial04Distribution.hs  Tutorial05Theme.hs  VegaLiteGallery.hs
hgg-svg/examples/DocFig/: Common.hs  Decoration.hs  EncodingScale.hs  Layers.hs  Quickstart.hs
hgg-svg/src/Graphics/Hgg/: Quick.hs
hgg-svg/src/Graphics/Hgg/Backend/: SVG.hs
hgg-svg/src/Hgg/Plot/: Quick.hs
hgg-svg/src/Hgg/Plot/Backend/: SVG.hs
hgg-svg/test/: Spec.hs
hgg-tutorials/: hgg-tutorials.cabal
hgg-tutorials/readme-images/: ReadmeImages.hs
hgg/src/Graphics/: Hgg.hs
(+73 files in other folders)
