cabal-version:      3.0
name:               hgg-3d
version:            0.1.0.0
synopsis:           3D plot (CPU projection) for hgg; works with all 2D backends
description:
  matplotlib mplot3d 同等の 3D plot library。 CPU-based projection + painter's
  algorithm により、 既存の hgg 2D backend (SVG / PDF / Rasterific)
  をそのまま使って 3D scatter / line / wireframe / surface を描画できる。
  .
  WebGL 不要、 純 Haskell 完結。 web 環境での interactive 3D (= camera 回転等)
  は別リポジトリの PureScript frontend 側で WebGL backend を実装しており、
  事前 bundle 済 JS (`data/webgl-spec.js`) を通じて連携する。
license:            BSD-3-Clause
homepage:           https://github.com/frenzieddoll/hgg
license-file:       LICENSE
author:             Toshiaki Honda
maintainer:         frenzieddoll@gmail.com
copyright:          2026 Aelysce Project (Toshiaki Honda)
category:           Graphics
build-type:         Simple
data-files:         data/webgl-spec.js

common warnings
  ghc-options:        -Wall -Wcompat -Widentities -Wincomplete-record-updates
                      -Wincomplete-uni-patterns -Wpartial-fields
                      -Wredundant-constraints

library
  import:           warnings
  exposed-modules:  Hgg.Plot.ThreeD
                    Hgg.Plot.ThreeD.Bound
                    Hgg.Plot.ThreeD.Types
                    Hgg.Plot.ThreeD.Projection
                    Hgg.Plot.ThreeD.Axes
                    Hgg.Plot.ThreeD.Scatter
                    Hgg.Plot.ThreeD.Line
                    Hgg.Plot.ThreeD.Surface
                    Hgg.Plot.ThreeD.Delaunay
                    Hgg.Plot.ThreeD.Bar
                    Hgg.Plot.ThreeD.Spec
                    Hgg.Plot.ThreeD.Browser
                    Hgg.Plot.ThreeD.Easy
  other-modules:    Paths_hgg_3d
  autogen-modules:  Paths_hgg_3d
  hs-source-dirs:   src
  build-depends:    base                 >= 4.17 && < 5
                  , text                 >= 2.0  && < 2.2
                  , containers           >= 0.6  && < 0.8
                  , vector               >= 0.13 && < 0.14
                  , hgg-core        ^>= 0.1
                  , hgg-svg         ^>= 0.1
                  , hgg-pdf         ^>= 0.1
                  , hgg-rasterific  ^>= 0.1
                  , hgg-frame       ^>= 0.1
                  , aeson                >= 2.1  && < 2.3
                  , bytestring           >= 0.11 && < 0.13
                  , directory            >= 1.3  && < 1.4
                  , filepath             >= 1.4  && < 1.6
                  , process              >= 1.6  && < 1.7
  default-language: Haskell2010

executable plot3d-demo
  import:           warnings
  main-is:          Plot3DDemo.hs
  hs-source-dirs:   examples
  build-depends:    base
                  , text
                  , vector
                  , directory
                  , hgg-3d
                  , hgg-core
                  , hgg-svg
                  , hgg-frame
  default-language: Haskell2010

executable browser-3d-demo
  import:           warnings
  main-is:          Browser3DDemo.hs
  hs-source-dirs:   examples
  build-depends:    base
                  , hgg-3d
                  , hgg-core
  default-language: Haskell2010

executable plot3d-printjson
  import:           warnings
  main-is:          PrintJson.hs
  hs-source-dirs:   examples
  build-depends:    base
                  , aeson
                  , bytestring
                  , hgg-3d
                  , hgg-core
  default-language: Haskell2010

test-suite hgg-3d-tests
  import:           warnings
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  build-depends:    base
                  , text
                  , vector
                  , directory
                  , hgg-3d
                  , hgg-core
                  , hgg-frame
                  , hspec                >= 2.10 && < 2.12
  default-language: Haskell2010
