cabal-version:      3.0
name:               hgg-analyze-bridge
version:            0.1.0.0
extra-doc-files:    CHANGELOG.md
synopsis:           Bridge from hanalyze (Hanalyze.Model.HBM.ModelGraph) to hgg DAG rendering
description:
  Renders hanalyze's HBM ModelGraph directly to SVG / PNG / PDF via hgg.
  No graphviz CLI or Mermaid CDN dependency, which makes it suitable for
  embedding in production applications and for offline batch use.
  .
  The existing Mermaid HTML (Hanalyze.Viz.ModelGraph) and Graphviz DOT
  (Hanalyze.Viz.ModelGraphDot) routes in hanalyze remain available;
  choose whichever fits the use case.
license:            BSD-3-Clause
homepage:           https://github.com/frenzieddoll/hgg
license-file:       LICENSE
author:             Toshiaki Honda
maintainer:         frenzieddoll@gmail.com
copyright:          2026 Aelysce Project (Toshiaki Honda)
category:           Graphics
build-type:         Simple

common warnings
  ghc-options:        -Wall -Wcompat -Widentities -Wincomplete-record-updates
                      -Wincomplete-uni-patterns -Wpartial-fields
                      -Wredundant-constraints

library
  import:           warnings
  exposed-modules:  Graphics.Hgg.Bridge.Analyze
                    Graphics.Hgg.Bridge.Analyze.Internal
                    Graphics.Hgg.Bridge.Stat
  hs-source-dirs:   src
  build-depends:    base                 >= 4.17 && < 5
                  , text                 >= 2.0  && < 2.2
                  , containers           >= 0.6  && < 0.8
                  , vector               >= 0.12 && < 0.14
                  , dataframe-core       ^>= 1.1
                  , hgg-core    ^>= 0.1
                  , hgg-frame   ^>= 0.1
                  , hgg-svg     ^>= 0.1
                  , hanalyze >= 0.2 && < 0.3
                  , hmatrix              >= 0.20 && < 0.21
  default-language: Haskell2010

executable three-routes-demo
  import:           warnings
  main-is:          ThreeRoutesDemo.hs
  hs-source-dirs:   examples
  build-depends:    base
                  , text
                  , containers
                  , directory
                  , hgg-analyze-bridge
                  , hanalyze >= 0.2 && < 0.3
  default-language: Haskell2010

executable stat-in-demo
  import:           warnings
  main-is:          StatInDemo.hs
  hs-source-dirs:   examples
  build-depends:    base
                  , vector               >= 0.12 && < 0.14
                  , containers
                  , text
                  , directory
                  , hgg-analyze-bridge
                  , hgg-core
                  , hgg-frame
                  , hgg-svg
  default-language: Haskell2010

test-suite hgg-analyze-bridge-tests
  import:           warnings
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  build-depends:    base
                  , text
                  , containers
                  , vector               >= 0.12 && < 0.14
                  , dataframe-core       ^>= 1.1
                  , hgg-analyze-bridge
                  , hgg-core
                  , hgg-frame
                  , hanalyze >= 0.2 && < 0.3
                  , hspec                >= 2.10 && < 2.12
  default-language: Haskell2010
