cabal-version:      3.0
name:               hgg-core
version:            0.1.0.0
extra-doc-files:    CHANGELOG.md
synopsis:           Core of hgg: VisualSpec / PlotData / Layout / Render primitives
description:
  The core of hgg, a backend-independent plotting library. Provides the
  VisualSpec ADT, PlotData (Vector-based columns), pure-function layout
  computation, and a Renderer abstraction that emits a list of drawing
  Primitives.
  .
  Dependencies are kept to base / vector / text / containers only;
  backends (SVG / PDF / Rasterific / LaTeX / ...) live in separate
  packages.
license:            BSD-3-Clause
homepage:           https://github.com/frenzieddoll/hgg
license-file:       LICENSE
author:             Toshiaki Honda
maintainer:         frenzieddoll@gmail.com
copyright:          2026 Aelysce Project (Toshiaki Honda)
category:           Graphics
build-type:         Simple
extra-source-files: README.md

common warnings
  ghc-options:        -Wall -Wcompat -Widentities -Wincomplete-record-updates
                      -Wincomplete-uni-patterns -Wpartial-fields
                      -Wredundant-constraints

library
  import:           warnings
  exposed-modules:  Hgg.Plot.Unit
                    Hgg.Plot.Primitive
                    Hgg.Plot.Spec
                    Hgg.Plot.Spec.Axis
                    Hgg.Plot.Spec.Bake
                    Hgg.Plot.Spec.Column
                    Hgg.Plot.Spec.Concat
                    Hgg.Plot.Spec.Constructors
                    Hgg.Plot.Spec.Layer
                    Hgg.Plot.Spec.CustomMark
                    Hgg.Plot.Spec.Decoration
                    Hgg.Plot.Spec.Mark
                    Hgg.Plot.Spec.Setters
                    Hgg.Plot.Spec.Theme
                    Hgg.Plot.Spec.Visual
                    Hgg.Plot.Validate
                    Hgg.Plot.Layout
                    Hgg.Plot.Layout.RangeOf
                    Hgg.Plot.Layout.Grid
                    Hgg.Plot.Math.Griddata
                    Hgg.Plot.Math.Special
                    Hgg.Plot.Render
                    Hgg.Plot.Render.Common
                    Hgg.Plot.Render.Basic
                    Hgg.Plot.Render.Distribution
                    Hgg.Plot.Render.Statistical
                    Hgg.Plot.Render.MCMC
                    Hgg.Plot.Render.Special
                    Hgg.Plot.Render.EdgeRoute
                    Hgg.Plot.Render.Layer
                    Hgg.Plot.Easy
                    Hgg.Plot.DAG
                    Hgg.Plot.DAG.Internal.Sugiyama
                    Hgg.Plot.Palette
                    Hgg.Plot.Color
                    Hgg.Plot.Color.Named
  hs-source-dirs:   src
  build-depends:    base       >= 4.17 && < 5
                  , vector     >= 0.13 && < 0.14
                  , text       >= 2.0  && < 2.2
                  , containers >= 0.6  && < 0.8
                  , aeson      >= 2.0  && < 2.3
                  , time       >= 1.12 && < 1.15
  default-language: Haskell2010

test-suite hgg-core-tests
  import:           warnings
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  build-depends:    base
                  , hgg-core
                  , vector
                  , text
                  , containers
                  , hspec      >= 2.10 && < 2.12
                  , aeson
                  , bytestring
                  , directory
                  , filepath
  default-language: Haskell2010
