cabal-version:      3.0
name:               hgg-core
version:            0.1.0.0
extra-doc-files:    CHANGELOG.md
synopsis:           Core of hgg: VisualSpec / PlotData / Layout / Render primitives
description:
  The core of hgg, a backend-independent plotting library. Provides the
  VisualSpec ADT, PlotData (Vector-based columns), pure-function layout
  computation, and a Renderer abstraction that emits a list of drawing
  Primitives.
  .
  Dependencies are kept to base / vector / text / containers only;
  backends (SVG / PDF / Rasterific / LaTeX / ...) live in separate
  packages.
license:            BSD-3-Clause
homepage:           https://github.com/frenzieddoll/hgg
license-file:       LICENSE
author:             Toshiaki Honda
maintainer:         frenzieddoll@gmail.com
copyright:          2026 Aelysce Project (Toshiaki Honda)
category:           Graphics
build-type:         Simple
extra-source-files: README.md

common warnings
  ghc-options:        -Wall -Wcompat -Widentities -Wincomplete-record-updates
                      -Wincomplete-uni-patterns -Wpartial-fields
                      -Wredundant-constraints

library
  import:           warnings
  exposed-modules:  Graphics.Hgg.Unit
                    Graphics.Hgg.Primitive
                    Graphics.Hgg.Spec
                    Graphics.Hgg.Spec.Axis
                    Graphics.Hgg.Spec.Bake
                    Graphics.Hgg.Spec.Column
                    Graphics.Hgg.Spec.Concat
                    Graphics.Hgg.Spec.Constructors
                    Graphics.Hgg.Spec.Layer
                    Graphics.Hgg.Spec.CustomMark
                    Graphics.Hgg.Spec.Decoration
                    Graphics.Hgg.Spec.Mark
                    Graphics.Hgg.Spec.Setters
                    Graphics.Hgg.Spec.Theme
                    Graphics.Hgg.Spec.Visual
                    Graphics.Hgg.Validate
                    Graphics.Hgg.Layout
                    Graphics.Hgg.Layout.RangeOf
                    Graphics.Hgg.Layout.Grid
                    Graphics.Hgg.Math.Griddata
                    Graphics.Hgg.Math.Special
                    Graphics.Hgg.Render
                    Graphics.Hgg.Render.Common
                    Graphics.Hgg.Render.Basic
                    Graphics.Hgg.Render.Distribution
                    Graphics.Hgg.Render.Statistical
                    Graphics.Hgg.Render.MCMC
                    Graphics.Hgg.Render.Special
                    Graphics.Hgg.Render.EdgeRoute
                    Graphics.Hgg.Render.Layer
                    Graphics.Hgg.Easy
                    Graphics.Hgg.DAG
                    Graphics.Hgg.DAG.Internal.Sugiyama
                    Graphics.Hgg.Palette
                    Graphics.Hgg.Color
                    Graphics.Hgg.Color.Named
  hs-source-dirs:   src
  build-depends:    base       >= 4.17 && < 5
                  , vector     >= 0.13 && < 0.14
                  , text       >= 2.0  && < 2.2
                  , containers >= 0.6  && < 0.8
                  , aeson      >= 2.0  && < 2.3
                  , time       >= 1.12 && < 1.15
  default-language: Haskell2010

test-suite hgg-core-tests
  import:           warnings
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  build-depends:    base
                  , hgg-core
                  , vector
                  , text
                  , containers
                  , hspec      >= 2.10 && < 2.12
                  , aeson
                  , bytestring
                  , directory
                  , filepath
  default-language: Haskell2010
