cabal-version:      3.0
name:               hgg-custom
version:            0.1.0.0
extra-doc-files:    CHANGELOG.md
synopsis:           Non-standard / advanced custom marks for hgg (dendrogram, ...)
description:
  通常の統計プロット以外の「custom mark」 (Phase 51 の customMark 拡張点で作る新プロット型) を
  隔離する add-on package。 core (MarkKind) は触らず、 hgg-core の Primitive /
  customMark のみに依存する。 必要な時 (RF / 階層クラスタリング等の専用可視化) だけ依存に足す。
  .
  Phase 48 (2026-07-09): 第 1 弾 = dendrogram (階層クラスタリングの樹形図)。 焼き込み
  (baked segments を cmOptions に) 方式で HS/PS parity を取りやすくする。
license:            BSD-3-Clause
homepage:           https://github.com/frenzieddoll/hgg
license-file:       LICENSE
author:             Toshiaki Honda
maintainer:         frenzieddoll@gmail.com
copyright:          2026 Aelysce Project (Toshiaki Honda)
category:           Graphics
build-type:         Simple

common warnings
  ghc-options:        -Wall -Wcompat -Widentities -Wincomplete-record-updates
                      -Wincomplete-uni-patterns -Wpartial-fields
                      -Wredundant-constraints

library
  import:           warnings
  exposed-modules:  Hgg.Plot.Custom.Dendrogram
  build-depends:    base             >= 4.16 && < 5
                  , hgg-core ^>= 0.1
                  , aeson            >= 2.0 && < 3
                  , text             >= 1.2 && < 3
                  , vector           >= 0.12 && < 0.14
  hs-source-dirs:   src
  default-language: Haskell2010
  default-extensions: OverloadedStrings
