cabal-version:      3.0
name:               hgg-custom
version:            0.1.0.0
extra-doc-files:    CHANGELOG.md
synopsis:           Non-standard / advanced custom marks for hgg (dendrogram, ...)
description:
  An add-on package that isolates non-standard "custom marks" — new plot
  types built on hgg-core's customMark extension point — from the core
  library. It never touches core's MarkKind; it depends only on
  hgg-core's Primitive / customMark API. Add it as a dependency only when
  you need these specialized visualizations (e.g. for random forests or
  hierarchical clustering).
  .
  Currently ships a dendrogram mark (tree diagrams for hierarchical
  clustering), using pre-baked segments for easy cross-backend parity.
license:            BSD-3-Clause
homepage:           https://github.com/frenzieddoll/hgg
license-file:       LICENSE
author:             Toshiaki Honda
maintainer:         frenzieddoll@gmail.com
copyright:          2026 Aelysce Project (Toshiaki Honda)
category:           Graphics
build-type:         Simple

common warnings
  ghc-options:        -Wall -Wcompat -Widentities -Wincomplete-record-updates
                      -Wincomplete-uni-patterns -Wpartial-fields
                      -Wredundant-constraints

library
  import:           warnings
  exposed-modules:  Hgg.Plot.Custom.Dendrogram
  build-depends:    base             >= 4.16 && < 5
                  , hgg-core ^>= 0.1
                  , aeson            >= 2.0 && < 3
                  , text             >= 1.2 && < 3
                  , vector           >= 0.12 && < 0.14
  hs-source-dirs:   src
  default-language: Haskell2010
  default-extensions: OverloadedStrings
