cabal-version:      3.0
name:               hgg-dataframe
version:            0.1.0.0
synopsis:           DataFrame ↔ hgg Resolver bridge
description:
  Hackage `dataframe` package を 'Hgg.Plot.Spec.Resolver' に橋渡しする。
  これにより plotnine 風の col 名渡し API (= `scatter "weight" "mpg"`) が
  そのまま動く。
  .
  core は dataframe lib に非依存 (= OSS の純粋性を保つ)、 当 package は
  frontend/backend 統合 / hanalyze 統合 / OSS user で DataFrame を
  使う人向けの opt-in bridge。
license:            BSD-3-Clause
license-file:       LICENSE
homepage:           https://github.com/frenzieddoll/hgg
author:             Toshiaki Honda
maintainer:         frenzieddoll@gmail.com
copyright:          2026 Aelysce Project (Toshiaki Honda)
category:           Graphics
build-type:         Simple

common warnings
  ghc-options:        -Wall -Wcompat -Widentities -Wincomplete-record-updates
                      -Wincomplete-uni-patterns -Wpartial-fields
                      -Wredundant-constraints

library
  import:           warnings
  exposed-modules:  Hgg.Plot.DataFrame
  hs-source-dirs:   src
  build-depends:    base                >= 4.17 && < 5
                  , text                >= 2.0  && < 2.2
                  , vector              >= 0.13 && < 0.14
                  , dataframe-core       ^>= 1.1
                  , dataframe-operations >= 1.1.1 && < 1.2
                  , deepseq             >= 1.4  && < 1.6
                  , hgg-core   ^>= 0.1
                  , hgg-frame  ^>= 0.1
                  , hgg-svg    ^>= 0.1
  default-language: Haskell2010

test-suite hgg-dataframe-tests
  import:           warnings
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  build-depends:    base
                  , text
                  , vector
                  , containers
                  , dataframe-core       ^>= 1.1
                  , hgg-core
                  , hgg-frame
                  , hgg-svg
                  , hgg-dataframe
                  , hspec               >= 2.10 && < 2.12
  default-language: Haskell2010
