cabal-version:      3.0
name:               hgg-doe
version:            0.1.0.0
synopsis:           DoE (Design of Experiments) chart helpers built on hgg-core
description:
  半導体ドメイン特化向けに、 DoE (実験計画) 用の
  MainEffects / Interaction / ResponseSurface 等の chart を、 hgg-core
  の汎用 API (= MContour / vsSubplots / 既存 layer) の合成 helper として提供。
  .
  基盤 (MContour / vsSubplots) は hgg-core に置き、 doe package は
  **薄い semantic layer** のみ持つ。 core と独立に OSS 化判断ができるよう
  別 package として切り出している。
license:            BSD-3-Clause
homepage:           https://github.com/frenzieddoll/hgg
license-file:       LICENSE
author:             Toshiaki Honda
maintainer:         frenzieddoll@gmail.com
copyright:          2026 Aelysce Project (Toshiaki Honda)
category:           Graphics
build-type:         Simple

common warnings
  ghc-options:        -Wall -Wcompat -Widentities -Wincomplete-record-updates
                      -Wincomplete-uni-patterns -Wpartial-fields
                      -Wredundant-constraints

library
  import:           warnings
  exposed-modules:  Graphics.Hgg.DoE
                    Graphics.Hgg.DoE.MainEffects
                    Graphics.Hgg.DoE.Interaction
                    Graphics.Hgg.DoE.ResponseSurface
  build-depends:    base             >= 4.16 && < 5
                  , hgg-core
                  , text             >= 1.2 && < 3
  hs-source-dirs:   src
  default-language: Haskell2010
  default-extensions: OverloadedStrings
