cabal-version:      3.0
name:               hgg-frame
version:            0.1.0.0
extra-doc-files:    CHANGELOG.md
synopsis:           DataFrame abstraction (class PlotData) and the df |>> spec binding for hgg
description:
  hgg を「データフレーム + 列名」 で書くための df 非依存抽象。
  .
  * 'PlotData' — 任意の df 型を 'Resolver' (列名 → ColData) に橋渡しする typeclass。
    'Map'/assoc-list のゼロ依存 instance を同梱 (df ライブラリ無しでも使える)。
  * '(|>>)' — df を spec にバインドし 'BoundPlot' を作る演算子。
    (Hackage @dataframe@ が @|>@ を占有するため @|>>@ を採用)
  .
  描画ラッパ (saveSVGBound 等) は backend package (hgg-svg) 側に置く
  ため、 本 package は core のみに依存する (analyze 非依存)。
  Phase 14 (proposal spec-2 「DataFrame 統合」) の実体。
license:            BSD-3-Clause
homepage:           https://github.com/frenzieddoll/hgg
license-file:       LICENSE
author:             Toshiaki Honda
maintainer:         frenzieddoll@gmail.com
copyright:          2026 Aelysce Project (Toshiaki Honda)
category:           Graphics
build-type:         Simple

common warnings
  ghc-options:        -Wall -Wcompat -Widentities -Wincomplete-record-updates
                      -Wincomplete-uni-patterns -Wpartial-fields
                      -Wredundant-constraints

library
  import:           warnings
  exposed-modules:  Hgg.Plot.Frame
  hs-source-dirs:   src
  build-depends:    base       >= 4.17 && < 5
                  , vector     >= 0.13 && < 0.14
                  , text       >= 2.0  && < 2.2
                  , containers >= 0.6  && < 0.8
                  , hgg-core ^>= 0.1
  default-language: Haskell2010

test-suite hgg-frame-tests
  import:           warnings
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  build-depends:    base
                  , vector
                  , text
                  , containers
                  , hgg-core
                  , hgg-frame
                  , hspec      >= 2.10 && < 2.12
  default-language: Haskell2010
