cabal-version:      3.0
name:               hgg-frame
version:            0.1.0.0
extra-doc-files:    CHANGELOG.md
synopsis:           DataFrame abstraction (class PlotData) and the df |>> spec binding for hgg
description:
  A dataframe-independent abstraction for writing hgg plots as
  "dataframe + column names".
  .
  * 'PlotData' — a typeclass that bridges any dataframe type to a
    'Resolver' (column name to ColData). Zero-dependency instances for
    'Map' and assoc-lists are included, so it works without any dataframe
    library.
  * '(|>>)' — binds a dataframe to a spec, producing a 'BoundPlot'.
    (The Hackage @dataframe@ package already uses @|>@, hence @|>>@.)
  .
  Rendering wrappers (saveSVGBound etc.) live in the backend packages
  (hgg-svg etc.), so this package depends only on hgg-core.
license:            BSD-3-Clause
homepage:           https://github.com/frenzieddoll/hgg
license-file:       LICENSE
author:             Toshiaki Honda
maintainer:         frenzieddoll@gmail.com
copyright:          2026 Aelysce Project (Toshiaki Honda)
category:           Graphics
build-type:         Simple

common warnings
  ghc-options:        -Wall -Wcompat -Widentities -Wincomplete-record-updates
                      -Wincomplete-uni-patterns -Wpartial-fields
                      -Wredundant-constraints

library
  import:           warnings
  exposed-modules:  Hgg.Plot.Frame
  hs-source-dirs:   src
  build-depends:    base       >= 4.17 && < 5
                  , vector     >= 0.13 && < 0.14
                  , text       >= 2.0  && < 2.2
                  , containers >= 0.6  && < 0.8
                  , hgg-core ^>= 0.1
  default-language: Haskell2010

test-suite hgg-frame-tests
  import:           warnings
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  build-depends:    base
                  , vector
                  , text
                  , containers
                  , hgg-core
                  , hgg-frame
                  , hspec      >= 2.10 && < 2.12
  default-language: Haskell2010
