cabal-version:      3.0
name:               hgg-ihaskell
version:            0.1.0.0
synopsis:           iHaskell (Jupyter) inline display backend for hgg
description:
  Jupyter (iHaskell kernel) のセルで hgg の図をインライン描画する
  ための薄い配線 package。 SVG backend (`renderSVG`) が返す Text を iHaskell の
  SVG display に渡すだけ。 `ihaskell` 依存をここに隔離し core / svg は触らない
  (Architecture Spec §3.1 の core 依存規律維持)。 Phase 12 の実体。
license:            BSD-3-Clause
homepage:           https://github.com/frenzieddoll/hgg
license-file:       LICENSE
author:             Toshiaki Honda
maintainer:         frenzieddoll@gmail.com
copyright:          2026 Aelysce Project (Toshiaki Honda)
category:           Graphics
build-type:         Simple

common warnings
  ghc-options:        -Wall -Wcompat -Widentities -Wincomplete-record-updates
                      -Wincomplete-uni-patterns -Wpartial-fields
                      -Wredundant-constraints

library
  import:           warnings
  exposed-modules:  Hgg.Plot.IHaskell
  hs-source-dirs:   src
  build-depends:    base               >= 4.17 && < 5
                  , text               >= 2.0  && < 2.2
                  , ihaskell           >= 0.11 && < 0.14
                  , hgg-core  ^>= 0.1
                  , hgg-frame ^>= 0.1
                  , hgg-svg   ^>= 0.1
  default-language: Haskell2010

-- design/ihaskell/demo.ipynb の各セルが出す SVG を書き出す (A4 の出力確認用)
executable ihaskell-demo-svg
  import:           warnings
  main-is:          DemoSvg.hs
  hs-source-dirs:   examples
  build-depends:    base
                  , text
                  , vector
                  , hgg-core
                  , hgg-svg
  default-language: Haskell2010

test-suite hgg-ihaskell-tests
  import:           warnings
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  build-depends:    base
                  , text
                  , vector
                  , containers
                  , ihaskell
                  , hgg-core
                  , hgg-frame
                  , hgg-ihaskell
  default-language: Haskell2010
