cabal-version:      3.0
name:               hgg-ihaskell
version:            0.1.0.0
extra-doc-files:    CHANGELOG.md
synopsis:           iHaskell (Jupyter) inline display backend for hgg
description:
  A thin wiring package that displays hgg figures inline in Jupyter
  cells running the IHaskell kernel. It simply passes the Text returned
  by the SVG backend ('renderSVG') to IHaskell's SVG display. The
  @ihaskell@ dependency is isolated here, keeping hgg-core / hgg-svg
  dependency-clean.
license:            BSD-3-Clause
homepage:           https://github.com/frenzieddoll/hgg
license-file:       LICENSE
author:             Toshiaki Honda
maintainer:         frenzieddoll@gmail.com
copyright:          2026 Aelysce Project (Toshiaki Honda)
category:           Graphics
build-type:         Simple

common warnings
  ghc-options:        -Wall -Wcompat -Widentities -Wincomplete-record-updates
                      -Wincomplete-uni-patterns -Wpartial-fields
                      -Wredundant-constraints

library
  import:           warnings
  exposed-modules:  Graphics.Hgg.IHaskell
  hs-source-dirs:   src
  build-depends:    base               >= 4.17 && < 5
                  , text               >= 2.0  && < 2.2
                  , ihaskell           >= 0.11 && < 0.14
                  , hgg-core  ^>= 0.1
                  , hgg-frame ^>= 0.1
                  , hgg-svg   ^>= 0.1
  default-language: Haskell2010

-- Writes out the SVGs produced by each cell of design/ihaskell/demo.ipynb (for output verification)
executable ihaskell-demo-svg
  import:           warnings
  main-is:          DemoSvg.hs
  hs-source-dirs:   examples
  build-depends:    base               >= 4.17 && < 5
                  , text               >= 2.0  && < 2.2
                  , vector             >= 0.13 && < 0.14
                  , hgg-core  ^>= 0.1
                  , hgg-svg   ^>= 0.1
  default-language: Haskell2010

test-suite hgg-ihaskell-tests
  import:           warnings
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  build-depends:    base               >= 4.17 && < 5
                  , text
                  , vector
                  , containers
                  , ihaskell
                  , hgg-core
                  , hgg-frame
                  , hgg-ihaskell
  default-language: Haskell2010
