cabal-version:      3.0
name:               hgg-latex
version:            0.1.0.0
extra-doc-files:    CHANGELOG.md
synopsis:           LaTeX (TikZ) backend for hgg
description:
  LaTeX backend (Phase 54)。 plot-core の [Primitive] を TikZ 命令の
  純テキストに解釈する (SVG/PDF backend と同じ Layer 1 構図)。
  新規 runtime 依存ゼロ (text 生成のみ)。 生成 .tex の組版は利用者側の
  LaTeX 環境 (pdflatex 等) が行う — §10.7 (外部 CLI の production 依存禁止)
  と同じ流儀で、 本 package は LaTeX バイナリに依存しない。
license:            BSD-3-Clause
homepage:           https://github.com/frenzieddoll/hgg
license-file:       LICENSE
author:             Toshiaki Honda
maintainer:         frenzieddoll@gmail.com
copyright:          2026 Aelysce Project (Toshiaki Honda)
category:           Graphics
build-type:         Simple
extra-source-files: test/golden/*.tex

common warnings
  ghc-options:        -Wall -Wcompat -Widentities -Wincomplete-record-updates
                      -Wincomplete-uni-patterns -Wpartial-fields
                      -Wredundant-constraints

library
  import:           warnings
  exposed-modules:  Hgg.Plot.Backend.LaTeX
  hs-source-dirs:   src
  build-depends:    base               >= 4.17 && < 5
                  , text               >= 2.0  && < 2.2
                  , hgg-core  ^>= 0.1
                  , hgg-frame ^>= 0.1
  default-language: Haskell2010

test-suite hgg-latex-tests
  import:           warnings
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  default-language: Haskell2010
  build-depends:    base
                  , hspec              >= 2.10 && < 2.12
                  , text
                  , hgg-core
                  , hgg-latex
