cabal-version:      3.0
name:               hgg-latex
version:            0.1.0.0
extra-doc-files:    CHANGELOG.md
synopsis:           LaTeX (TikZ) backend for hgg
description:
  LaTeX (TikZ) backend for hgg. Interprets the [Primitive] list from
  hgg-core into plain TikZ commands, in the same single-pass architecture
  as the SVG / PDF backends. Adds zero runtime dependencies (pure text
  generation). Typesetting the generated .tex is left to the user's LaTeX
  environment (pdflatex, lualatex, ...) — this package does not depend on
  any LaTeX binary.
license:            BSD-3-Clause
homepage:           https://github.com/frenzieddoll/hgg
license-file:       LICENSE
author:             Toshiaki Honda
maintainer:         frenzieddoll@gmail.com
copyright:          2026 Aelysce Project (Toshiaki Honda)
category:           Graphics
build-type:         Simple
extra-source-files: test/golden/*.tex

common warnings
  ghc-options:        -Wall -Wcompat -Widentities -Wincomplete-record-updates
                      -Wincomplete-uni-patterns -Wpartial-fields
                      -Wredundant-constraints

library
  import:           warnings
  exposed-modules:  Graphics.Hgg.Backend.LaTeX
  hs-source-dirs:   src
  build-depends:    base               >= 4.17 && < 5
                  , text               >= 2.0  && < 2.2
                  , hgg-core  ^>= 0.1
                  , hgg-frame ^>= 0.1
  default-language: Haskell2010

test-suite hgg-latex-tests
  import:           warnings
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  default-language: Haskell2010
  build-depends:    base
                  , hspec              >= 2.10 && < 2.12
                  , text
                  , hgg-core
                  , hgg-latex
